[package]
name = "brine-tree"
version = "0.1.0"
edition = "2021"
description = "Merkle tree implementation for Solana SVM programs"
license = "MIT"
repository = "https://github.com/zfedoran/brine-tree"
readme = "README.md"
keywords = ["solana", "merkle-tree", "no_std", "cryptography"]
categories = ["cryptography", "no-std", "wasm", "embedded"]

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
bytemuck = { version = "1.18.0", features = ["derive"] }
sha2 = "0.10.8"
bs58 = "0.5.1"

[features]
default = ["std"]
std = []
