[package]
name = "brine-tree"
version = "0.5.0"
edition = "2021"
description = "Merkle tree implementation for Solana programs"
license = "MIT"
repository = "https://github.com/zfedoran/brine-tree"
readme = "README.md"
keywords = ["solana", "merkle-tree", "crypto"]

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
sha3 = "0.10.8"
bytemuck = { version = "1.18.0", features = ["derive"] }
solana-program = { version = ">=1.18.0", optional = true }

[features]
default = ["std"]
std = []
solana = ["solana-program"]
