[package]
name = "brine-tree"
version = "0.6.2"
edition = "2021"
description = "Merkle tree implementation for Solana programs"
license = "MIT"
repository = "https://github.com/zfedoran/brine-tree"
readme = "README.md"
keywords = ["solana", "merkle-tree", "crypto"]

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
blake3 = "1.8.2"
bytemuck = { version = "1.18.0", features = ["derive"] }
solana-program = { version = ">=1.18.0", optional = true }

[dev-dependencies]
criterion = "0.5"
rand = "0.8"

[features]
default = ["std"]
std = []
solana = ["solana-program"]

[[bench]]
name = "merkle_proof"
harness = false
